test_suite/tests/ui/transparent/at_most_one.stderr
error: #[serde(transparent)] requires struct to have at most one transparent field
 --> $DIR/at_most_one.rs:5:1
  |
5 | / #[serde(transparent)]
6 | | struct S {
7 | |     a: u8,
8 | |     b: u8,
9 | | }
  | |_^

error: aborting due to previous error

